--- a/posts/Aish-day-4/index.qmd
+++ b/posts/Aish-day-4/index.qmd
@@ -298,3 +298,32 @@ race_start_factor %>%
   gf_facet_wrap(vars(start_day_time), ncol = 2, scales = "free_y") %>%
   gf_labs(title = "Race Times by Start-Time")
 ```
+
+## **Distributions and Densities in the Wild**
+
+```{r}
+pop <- read_csv("../../data/populations.csv")
+pop
+inspect(pop)
+```
+
+```{r}
+glimpse(pop)
+```
+
+```{r}
+##
+gf_histogram(~value, data = pop, title = "Long Tailed Histogram")
+##
+gf_density(~value, data = pop, title = "Long Tailed Density")
+```
+
+#### insights
+
+-   I don't really understand much from these graphs.
+
+```{r}
+gf_histogram(~ log10(value), data = pop, title = "Histogram with Log transformed x-variable")
+##
+gf_density(~ log10(value), data = pop, title = "Density with Log transformed x-variable")
+```
