--- a/posts/Aish-day-5/index.qmd
+++ b/posts/Aish-day-5/index.qmd
@@ -12,6 +12,7 @@ Today, we are learning all about **box plots**.
 
 ```{r}
 #| label: setup
+library(usethis)
 library(tidyverse)
 library(mosaic)
 library(ggformula)
